# slotted-pig

./: .gitignore  404.html  Cargo.toml  README.md  index.html  tailwind.css
.github/workflows/: rust.yml
assets/dioxus/: slotted-pig-ui.js  slotted-pig-ui_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-e8d4f2300616f4bc/: inline0.js
examples/: categorized.yaml  categorizer.yaml  transaction_parser.yaml  transactions.csv
slotted-pig-cli/: Cargo.toml
slotted-pig-cli/src/: main.rs
slotted-pig-dioxus/: Cargo.toml
slotted-pig-dioxus/src/: main.rs
slotted-pig-lib/: Cargo.toml
slotted-pig-lib/src/: categorizer.rs  lib.rs  tests.rs  transaction.rs  util.rs
slotted-pig-lib/src/categorizer/: categorized.rs  mod.rs  transaction_matcher.rs
slotted-pig-lib/src/snapshots/: slotted_pig_lib__tests__empty.snap  slotted_pig_lib__tests__simple.snap
slotted-pig-lib/src/store/: mod.rs  transaction_sql.rs
slotted-pig-lib/src/transaction/: mod.rs  parser.rs
slotted-pig-lib/src/util/: mod.rs  tests.rs
slotted-pig-lib/tests/: categorizer_empty.json  categorizer_empty.yaml  categorizer_simple.json  categorizer_simple.yaml  transactions_simple.csv
slotted-pig-parser/: Cargo.toml  README.md
slotted-pig-ui/: Cargo.toml  Dioxus.toml
slotted-pig-ui/assets/: tailwind.css
slotted-pig-ui/src/: main.rs
