[workspace]
resolver = "2"
members = [
    "slotted-pig-cli",
    "slotted-pig-dioxus",
    "slotted-pig-lib",
    "slotted-pig-parser",
]

# # TODO: put this behind the wasm target
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
