[package]
name = "slotted-pig-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "0.99" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"