[package]
name = "slotted-pig-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "0.99" }
insta = { version = "1", features = ["yaml"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_regex = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
test-case = "3"
