[package]
name = "slotted-pig-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bigdecimal = "0.4"
chrono = "0.4"
dioxus = "0.5"
dioxus-sdk = "0.5"
dioxus-logger = "0.5"
log = "0.4"
serde = "1"
serde_yaml = "0.9"
slotted-pig-lib = { path = "../slotted-pig-lib" }
tracing = "0.1"

[features]
default = []
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
